# saturnin

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  saturnin-setup.py  saturnin_setup.py  setup.cfg  setup.py
docs/: changelog.rst  conf.py  getting-started.rst  getting-started.txt  index.rst  index.txt  make-docset  ref-base-component.txt  ref-base-config.rst  ref-base-recipe.txt  ref-base-site.txt  ref-base-transport.txt  ref-base-types.txt  ref-base.txt  ref-component-bundle.rst  ref-component-client.txt  ref-component-controller.rst  ref-component-controller.txt  ref-component-micro.rst  ref-component-micro.txt  ref-component-recipe.rst  ref-component-registry.txt  ref-component-service.txt  ref-component-single.rst  ref-lib-command.txt  ref-lib-console.txt  ref-lib-daemon.rst  ref-lib-daemon.txt  ref-lib-data-consumer.txt  ref-lib-data-filter.txt  ref-lib-data-onepipe.rst  ref-lib-data-provider.txt  ref-lib-metadata.rst  ref-lib-pyproject.txt  ref-protocol-fbdp.rst  ref-protocol-fbdp.txt  ref-protocol-fbsp.txt  ref-protocol-iccp.txt  ref-scripts-bundlerun.rst  ref-scripts-bundlerun.txt  (+15 more)
docs/saturnin.docset/Contents/: Info.plist
docs/saturnin.docset/Contents/Resources/: docSet.dsidx
docs/saturnin.docset/Contents/Resources/Documents/: .buildinfo  changelog.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  ref-base-component.html  ref-base-config.html  ref-base-recipe.html  ref-base-site.html  ref-base-transport.html  ref-base-types.html  ref-base.html  ref-component-apps.html  ref-component-bundle.html  ref-component-client.html  ref-component-controller.html  ref-component-micro.html  ref-component-recipe.html  ref-component-registry.html  ref-component-service.html  ref-component-single.html  ref-lib-console.html  ref-lib-daemon.html  ref-lib-data-filter.html  ref-lib-data-onepipe.html  ref-lib-metadata.html  ref-lib-pyproject.html  ref-protocol-fbdp.html  ref-protocol-fbsp.html  ref-protocol-iccp.html  ref-scripts-bundlerun.html  ref-scripts-cli.html  ref-scripts-commands-daemons.html  ref-scripts-commands-oids.html  ref-scripts-commands-pkg.html  ref-scripts-commands-recipes.html  ref-scripts-commands-site.html  (+9 more)
docs/saturnin.docset/Contents/Resources/Documents/_modules/: index.html  typing.html  uuid.html
docs/saturnin.docset/Contents/Resources/Documents/_modules/firebird/base/: signal.html  types.html
docs/saturnin.docset/Contents/Resources/Documents/_modules/prompt_toolkit/key_binding/: key_bindings.html
docs/saturnin.docset/Contents/Resources/Documents/_modules/rich/: markdown.html  text.html  theme.html
docs/saturnin.docset/Contents/Resources/Documents/_modules/saturnin/_scripts/: bundlerun.html  cli.html  completers.html  daemon.html  repl.html  svcrun.html
docs/saturnin.docset/Contents/Resources/Documents/_modules/saturnin/base/: component.html  config.html  transport.html  types.html
docs/saturnin.docset/Contents/Resources/Documents/_modules/saturnin/component/: apps.html  bundle.html  client.html  controller.html  micro.html  recipe.html  registry.html  service.html  single.html
docs/saturnin.docset/Contents/Resources/Documents/_modules/typer/: main.html
docs/saturnin.docset/Contents/Resources/Documents/_sources/: changelog.txt  getting-started.rst.txt  getting-started.txt  index.rst.txt  ref-base-transport.rst.txt  ref-base-types.rst.txt  ref-base-types.txt  ref-base.txt  ref-component-apps.rst.txt  ref-component-client.txt  ref-component-registry.rst.txt  ref-component-service.rst.txt  ref-component-service.txt  ref-lib-data-filter.txt  ref-lib-data-onepipe.txt  ref-protocol-fbsp.rst.txt  ref-protocol-fbsp.txt  ref-protocol-iccp.txt  ref-scripts-cli.txt  ref-scripts-commands-oids.rst.txt  ref-scripts-commands-pkg.rst.txt  ref-scripts-commands-pkg.txt  ref-scripts-commands-site.txt  ref-scripts-svcrun.rst.txt  ref-scripts-svcrun.txt  reference.rst.txt  reference.txt  usage-guide.txt
oid/: protocols.oid  saturnin.oid
protobuf/: common.proto  fblog.proto  node.proto
saturnin/_scripts/: bundlerun.py  cli.py  daemon.py  init.py  pkg.py  site.py  svcrun.py
saturnin/_scripts/commands/: cli.py  pkg.py  site.py
saturnin/base/: __init__.py  component.py  recipe.py  site.py  transport.py  types.py
saturnin/component/: bundle.py  client.py  controller.py  micro.py  registry.py  service.py
saturnin/lib/: command.py  daemon.py  pyproject.py
saturnin/lib/data/: consumer.py  filter.py  onepipe.py  provider.py
saturnin/micro/data/aggregator/: api.py  service.py
saturnin/micro/data/filter/: api.py  service.py
saturnin/micro/data/printer/: api.py  service.py
saturnin/micro/fblog/: api.py  fblog.proto  fblog_pb2.py  service.py
saturnin/micro/firebird/log/fromsrv/: api.py  service.py
saturnin/micro/firebird/log/parse/: api.py  msgs.py  service.py
saturnin/micro/text/linefilter/: api.py  service.py
saturnin/micro/text/reader/: api.py  service.py
saturnin/micro/text/writer/: api.py  service.py
saturnin/protobuf/: common_pb2.py  fblog.proto  fblog_pb2.py  node.proto  node_pb2.py  saturnin.proto  saturnin_pb2.py
saturnin/protocol/: fbdp.py  fbsp.py  iccp.py
saturnin/service/fblog/: api.py  client.py  fblog.proto  fblog_pb2.py  service.py  test.py
saturnin/service/node/: api.py  client.py  console.py  node.proto  node_pb2.py  runner.py  service.py  test.py
saturnin/utils/: nodemngr.py
src/saturnin/_scripts/: bundlerun.py  cli.py  completers.py  daemon.py  repl.py  svcrun.py
src/saturnin/_scripts/commands/: daemons.py  oids.py  pkg.py  recipes.py  run.py  site.py
src/saturnin/base/: __init__.py  _site.py  component.py  config.py  site.py  transport.py  types.py
src/saturnin/component/: __init__.py  apps.py  bundle.py  client.py  controller.py  micro.py  recipe.py  registry.py  service.py  single.py
src/saturnin/lib/: console.py  daemon.py  metadata.py  pyproject.py  wingdbstub.py
src/saturnin/lib/data/: filter.py  onepipe.py
src/saturnin/protocol/: fbdp.py  fbsp.py  iccp.py
tests/: conftest.py  test_fbdp.py
(+13 files in other folders)
