[build-system]
requires = ["setuptools >= 65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saturnin"
description = "Firebird Butler platform for Python"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Cisar", email = "pcisar@users.sourceforge.net"}]
keywords = ["Saturnin", "Firebird", "Butler", "Platform", "ZeroMQ"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Database"
    ]
dependencies = [
    "toml>=0.10.2",
    "pyzmq>=25.0.2",
    "protobuf>=4.21.12, <4.22",
    "firebird-butler-protobuf>=0.5.0",
    "firebird-base>=1.6.1, <2",
    "firebird-uuid>=0.2.0",
    "typer>=0.7.0",
    "rich>=13.3.3",
    "prompt-toolkit>=3.0.38",
    "psutil>=5.9.4"
    ]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "saturnin.base.VERSION"}

[project.optional-dependencies]
firebird = ["firebird-driver>=1.8", "firebird-lib>=1.3"]

[project.urls]
Home = "http://firebirdsql.org/en/saturnin/"
Documentation = "https://saturnin.rtfd.io"
"Bug Reports" = "https://github.com/FirebirdSQL/saturnin/issues"
Funding = "https://www.firebirdsql.org/en/donate/"
Source = "https://github.com/FirebirdSQL/saturnin"

[project.scripts]
saturnin = "saturnin._scripts.cli:main"
saturnin-daemon = "saturnin._scripts.daemon:main"
saturnin-service = "saturnin._scripts.svcrun:main"
saturnin-bundle = "saturnin._scripts.bundlerun:main"

[project.entry-points."saturnin.no_repl_commands"]
"initialize" = "saturnin._scripts.commands.site:initialize"
"create.home" = "saturnin._scripts.commands.site:create_home"

[project.entry-points."saturnin.commands"]
"list.services" = "saturnin._scripts.commands.pkg:list_services"
"list.applications" = "saturnin._scripts.commands.pkg:list_applications"
"list.packages" = "saturnin._scripts.commands.pkg:list_packages"
"list.directories" = "saturnin._scripts.commands.site:list_directories"
"list.configs" = "saturnin._scripts.commands.site:list_configs"
"list.datafiles" = "saturnin._scripts.commands.site:list_datafiles"
"list.recipes" = "saturnin._scripts.commands.recipes:list_recipes"
"list.daemons" = "saturnin._scripts.commands.daemons:list_daemons"
"list.oids" = "saturnin._scripts.commands.oids:list_oids"
"update.oids" = "saturnin._scripts.commands.oids:update_oids"
"update.registry" = "saturnin._scripts.commands.pkg:update_registry"
"pip" = "saturnin._scripts.commands.pkg:pip"
"show.config" = "saturnin._scripts.commands.site:show_config"
"show.recipe" = "saturnin._scripts.commands.recipes:show_recipe"
"show.oid" = "saturnin._scripts.commands.oids:show_oid"
"show.service" = "saturnin._scripts.commands.pkg:show_service"
"show.application" = "saturnin._scripts.commands.pkg:show_application"
"show.daemon" = "saturnin._scripts.commands.daemons:show_daemon"
"edit.config" = "saturnin._scripts.commands.site:edit_config"
"edit.recipe" = "saturnin._scripts.commands.recipes:edit_recipe"
"create.config" = "saturnin._scripts.commands.site:create_config"
"stop.daemon" = "saturnin._scripts.commands.daemons:stop_daemon"
"install.package" = "saturnin._scripts.commands.pkg:install_package"
"install.recipe" = "saturnin._scripts.commands.recipes:install_recipe"
"uninstall.package" = "saturnin._scripts.commands.pkg:uninstall_package"
"uninstall.recipe" = "saturnin._scripts.commands.recipes:uninstall_recipe"
"create.recipe" = "saturnin._scripts.commands.recipes:create_recipe"
