[build_sphinx]
source-dir=docs
all-files=True


[metadata]
name = saturnin
version = 0.3.0
description = Reference implementation of selected Firebird Butler services in Python
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Pavel Císař
author_email = pcisar@users.sourceforge.net
license = MIT
license_file = LICENSE
url = https://github.com/FirebirdSQL/saturnin
keywords = Firebird Butler Services ZeroMQ Saturnin
project_urls =
    Documentation = https://saturnin.rtfd.io
    Bug Reports = https://github.com/FirebirdSQL/saturnin/issues
    Funding = https://www.firebirdsql.org/en/donate/
    Source = https://github.com/FirebirdSQL/saturnin
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Database
    Topic :: System :: Systems Administration
    Topic :: System :: Monitoring
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
python_requires = >=3.7, <4
install_requires =
    saturnin-core>=0.5.1
packages = find_namespace:

[options.packages.find]
include = saturnin.*

[options.entry_points]
console_scripts =
    saturnin-node = saturnin.service.node.runner:main
    nodeconsole = saturnin.service.node.console:main
saturnin.service =
    saturnin-node = saturnin.service.node.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.text.reader = saturnin.micro.text.reader.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.text.writer = saturnin.micro.text.writer.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.text.linefilter = saturnin.micro.text.linefilter.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.data.aggregator = saturnin.micro.data.aggregator.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.data.filter = saturnin.micro.data.filter.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.data.printer = saturnin.micro.data.printer.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.firebird.log.fromsrv = saturnin.micro.firebird.log.fromsrv.api:SERVICE_DESCRIPTOR
    firebird.saturnin.micro.firebird.log.parse = saturnin.micro.firebird.log.parse.api:SERVICE_DESCRIPTOR
firebird.butler.protobuf =
    saturnin.protobuf.common = saturnin.protobuf.common_pb2:DESCRIPTOR
    saturnin.protobuf.fblog = saturnin.protobuf.fblog_pb2:DESCRIPTOR
    saturnin.protobuf.node = saturnin.protobuf.node_pb2:DESCRIPTOR

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0

